--- a/demoapp/Podfile
+++ b/demoapp/Podfile
@@ -9,6 +9,7 @@ target 'demoapp' do
 #  pod 'VGSCollectSDK'
   pod 'VGSCollectSDK', :path => "../"
   pod 'VGSCollectSDK/CardIO', :path => "../"
+  pod 'Stripe'
 
 end
 
